# rs-project-template

./: .gitattributes  .gitignore  Cargo.toml  cargo-generate.toml  configure-cache.rhai  justfile  readme.md  rust-toolchain.toml
src/: lib.rs
src/common/: mod.rs  pprof.rs
